# nlqk

./: .gitignore  LICENSE  README.md  README_pypi.rst  dev.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  test_python-package.yml
docs/: CNAME  README.md  _config.yml  index.html
nlqk/: __init__.py  nlqk.py
tests/: test_nlqk.py
